ncc/testsuite/positive/variant-subtype.n
[Record]
class A {}

variant X : A { | Y }

variant Z {
  | Foo { x : string; }
  | Zoo { x : string; }
  | Boo
}

class T {
  static f (_ : A) : void {}
  static Main () : void { T.f (Y()) }
}

/*
BEGIN-OUTPUT
END-OUTPUT
*/
