ncc/testsuite/negative/Issue-1245.n
//using Nemerle.Utility; // forgotten

interface IA
{
  X : int{ get; }
  Y : int{ get; }
}

[Record]
class A : IA //E: 'A' does not implement interface member
{
  [Accessor] _x : int; //E: the custom attribute .Accessor. could not be found or is invalid
  [Accessor] _y : int; //E: the custom attribute .Accessor. could not be found or is invalid
  
  static Main() : void { }
}
